@@ -1,3 +1,7 @@
+2007-01-17  Andreas Tobler  <a.tobler@schweiz.org>
+
+	* include/gc_config.h.in: Regenerate.
+
 2007-01-16  Petr Salinger  <Petr.Salinger@seznam.cz>
 
 	* include/private/gcconfig.h: Handle amd64/x86-64 cpu under
